<resources>
    <string name="app_name">B1Brog</string>
    <string name="coming_soon">Coming soon</string>
    <string name="recipes">Recipes</string>
    <string name="brew">Brew</string>
    <string name="history">History</string>
    <string name="edit">Edit</string>
    <string name="btn_save_edit">Update</string>
    <string name="amount_of_beans">Amount of beans</string>
    <string name="connect">Connect device</string>
    <string name="connecting">Connecting...</string>
    <string name="clean">Clean</string>
    <string name="community">Community</string>
    <string name="guide">Guide</string>
    <string name="quick_brew">Quick brew</string>
    <string name="new_brew">New brew</string>
    <string name="ground_coffee_g">Ground Coffee (g)</string>
    <string name="ground_coffee">Ground Coffee:</string>
    <string name="ground_coffee_info">recommended interval 10 – 40 (g)</string>
    <string name="grind_size_g">Grind size (g)</string>
    <string name="grind_size">Grind size:</string>
    <string name="grind_size_info"> fine, medium, coarse</string>
    <string name="coffee_water_ratio">Coffee/water ratio:</string>
    <string name="coffee_water_ratio_GL">Coffee/water ratio (g/L)</string>
    <string name="coffee_water_ratio_info">recommended interval 55 – 75 (g/L)</string>
    <string name="fine">Fine</string>
    <string name="medium">Medium</string>
    <string name="coarse">Coarse</string>
    <string name="brewing_temperature_C">Brewing temperature (°C)</string>
    <string name="brewing_temperature">Brewing temperature:</string>
    <string name="brewing_temperature_info">recommended interval 85 – 100 (°C)</string>
    <string name="bloom_water_Ml">Bloom water (ml)</string>
    <string name="bloom_water">Bloom water:</string>
    <string name="bloom_water_info">recommended interval 25 – 120 (ml)</string>
    <string name="bloom_time">Bloom time:</string>
    <string name="bloom_time_s">Bloom time (s)</string>
    <string name="bloom_time_info">recommended interval 20 – 45 (s)</string>
    <string name="total_brewing_time">Total brewing time: </string>
    <string name="total_brewing_time_min">Total brewing time (min)</string>
    <string name="total_brewing_time_info">recommended interval 1.30 – 4.00 (min, sec)</string>
    <string name="save">save</string>
    <string name="g">g</string>
    <string name="l">l</string>
    <string name="c">c</string>
    <string name="ml">ml</string>
    <string name="s">s</string>
    <string name="min">min</string>
    <string name="brewing">Brewing....</string>
    <string name="clear_standard">Clear standard</string>
    <string name="language">Language</string>
    <string name="connections">Connections</string>
    <string name="info">Info</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Recipes</string>
    <string name="tab_text_2">History</string>
    <string name="blank"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading...</string>
    <string name="clean_step1_instruction">Add cleaning solution...</string>
    <string name="clean_step1_button">Next</string>
    <string name="clean_step1_working">Cleaning...</string>
    <string name="clean_step2_instruction">Add water...</string>
    <string name="clean_step2_button">Next</string>
    <string name="clean_step2_working">Cleaning...</string>
    <string name="clean_step3_text">Done!</string>
    <string name="clean_step3_button">Go back</string>
    <string name="footer_with_copyright_description">Footer with copyright</string>
    <string name="footer_description">Footer without copyright</string>
    <string name="logo_with_text_description">BRØG logo with text</string>
    <string name="start">Start</string>
    <string name="_2020_br_g">© 2020 BRØG.</string>
    <string name="done">Done</string>
    <string name="saved_on_machine_underline"><u>Saved on the machine</u></string>
    <string name="favorites"><u>Favorites</u></string>
    <string name="EditUnderline"><u>Edit</u></string>
    <string name="brewName">name</string>
    <string name="recipes_underline"><u>Recipes</u></string>
    <string name="settings">Settings</string>
    <string name="offline">Work offline</string>
    <string name="about">About</string>

    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="connect_qr">Scan QR-code</string>
    <string name="connect_manual">Scan for nearby devices</string>
    <string name="scan_for_devices">Scan for devices</string>
    <string name="error_title">Error!</string>
    <string name="error_ble_not_supported">Sorry! BLE is not supported.</string>
    <string name="error_bluetooth_not_supported">Sorry! Bluetooth is not supported.</string>
    <string name="error_device_not_supported">Communication failed. Device may not be supported.</string>
    <string name="error_network_not_found">Network not found.</string>
    <string name="error_authentication_failed">Wi-Fi Authentication failed.</string>
    <string name="error_unknown">Device provisioning failed. Reason : Unknown.</string>
    <string name="error_pop_incorrect">Error establishing session.\n Check if Proof of Possession(POP) is correct!</string>
    <string name="error_no_ble_device">No Bluetooth devices found!</string>
    <string name="error_device_connect_failed">Error! Failed to connect with device.</string>
    <string name="error_ssid_empty">Network name cannot be empty</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_provisioning">Reset your board to factory defaults and retry</string>
    <string name="error_wifi_off">Please turn on Wi-Fi to connect with device.</string>
    <string name="proof_of_possesion">abcd1234</string>
    <string name="pop_instruction">Enter your proof of possession PIN for</string>
    <string name="dialog_msg_ble_device_disconnection">Device disconnected</string>
    <string name="ssid_hint_text">Network Name</string>
    <string name="password_hint_text">Password</string>
    <string name="hint_key">Enter PIN</string>
    <string name="prov_step_1">Sending Wi-Fi credentials</string>
    <string name="prov_step_2">Applying Wi-Fi connection</string>
    <string name="prov_step_3">Checking provisioning status</string>
    <string name="error_session_creation">Failed to create session</string>
    <string name="error_prov_step_1">Failed to send Wi-Fi credentials</string>
    <string name="error_prov_step_2">Failed to apply Wi-Fi credentials</string>
    <string name="error_prov_step_3">Failed to provisioning device</string>
    <string name="btn_reset_quick_brew">Reset quickbrew</string>
    <string name="recipe_menu_btn">Go to saved recipes og the history of your brews.</string>
    <string name="add_menu_btn">Add a new brew with your own measurements.</string>
    <string name="quick_menu_btn">"Quick brew" in order to get a quick cup of coffee with your own pre-installed measurements. On favorite list under the option "Recipes", this item symbolizes that it has been selected as a quick brew.</string>
    <string name="fav_menu_btn">Add brew to list over favorite brews (max. 5).</string>
    <string name="toast_saved">Saved.</string>
</resources>