<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_with_text_description"
        app:srcCompat="@drawable/ic_logo_w_text" />

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="70dp"
        style="@style/DefaultButton"
        android:id="@+id/language"
        android:text="@string/language"
        android:layout_gravity="center"/>

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="70dp"
        style="@style/DefaultButton"
        android:id="@+id/connections"
        android:text="@string/connections"
        android:layout_gravity="center"/>



</LinearLayout>