<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="0dp">

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_with_text_description"
        app:srcCompat="@drawable/ic_logo_w_text" />

    <ImageButton
        android:id="@+id/Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right"
        android:backgroundTint="#FFFFFF"
        android:src="@drawable/ic_baseline_settings_24"
        />


    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo2"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/Brew"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorplate1"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/brew"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <Button
            android:id="@+id/Clean"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorplate1"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/clean"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <Button
            android:id="@+id/Community"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorplate1"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/community"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <Button
            android:id="@+id/Guide"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorplate1"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/guide"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/footer4"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-65dp"
        android:contentDescription="@string/footer_with_copyright_description"
        app:srcCompat="@drawable/ic_footer_copyright" />

</RelativeLayout>