<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="15sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/IGroundCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:srcCompat="@android:drawable/ic_menu_info_details"/>

        <ImageView
            android:id="@+id/ny_opskrift"
            android:layout_width="136dp"
            android:layout_height="139dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/kaffevinter" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/seekbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ny_opskrift"
            android:layout_margin="50dp"
            android:gravity="center"
            android:orientation="vertical">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:thumb="@color/colorplate2"
                android:thumbTint="@color/colorplate2"
                >


                <TextView
                    android:id="@+id/txtGround_coffee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ground_coffee"
                    android:textColor="@color/colorplate2"
                    />


                <EditText
                    android:id="@+id/editGroundCoffee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:text="60"
                    android:textColor="@color/colorplate2"
                    />

                <TextView
                    android:id="@+id/Ground_coffee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g"
                    android:layout_gravity="center"
                    android:textColor="@color/colorplate2"/>


            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:thumb="@color/colorplate2"
                android:thumbTint="@color/colorplate2"
                >



                <TextView
                    android:id="@+id/txtGrindSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grind_size"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>


                <EditText
                    android:id="@+id/editgrindsize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:text="(fine)"
                    android:layout_gravity="center"
                    android:textColor="@color/colorplate2"/>

                <TextView
                    android:id="@+id/txtCoffeeAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:thumb="@color/colorplate2"
                android:thumbTint="@color/colorplate2"
                >



                <TextView
                    android:id="@+id/txtRatio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coffee_water_ratio"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>


                <EditText
                    android:id="@+id/editRatio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="textPersonName"
                    android:text="60"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/txtRatioAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="g/L"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:thumb="@color/colorplate2"
                android:thumbTint="@color/colorplate2"
                >



                <TextView
                    android:id="@+id/txtTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brewing_temperature"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>


                <EditText
                    android:id="@+id/editTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="textPersonName"
                    android:text="60"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/txtHowHot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="°C"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>


            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:thumb="@color/colorplate2"
                android:thumbTint="@color/colorplate2"
                >



                <TextView
                    android:id="@+id/txtBloomWater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bloom_water"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>


                <EditText
                    android:id="@+id/editBloomWater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="textPersonName"
                    android:text="60"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/txtBloomWaterAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ml"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>


            </androidx.appcompat.widget.LinearLayoutCompat>



            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:thumb="@color/colorplate2"
                android:thumbTint="@color/colorplate2"
                >


                <TextView
                    android:id="@+id/txtBloomTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bloom_time"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>



                <EditText
                    android:id="@+id/editBloomTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="textPersonName"
                    android:text="60"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/txtBloomTimeAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>


            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:thumb="@color/colorplate2"
                android:thumbTint="@color/colorplate2"
                >

                <TextView
                    android:id="@+id/txtTotalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_brewing_time"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>


                <EditText
                    android:id="@+id/editTotalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="textPersonName"
                    android:text="60"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/txtTotalTimeInAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:textColor="@color/colorplate2"
                    android:layout_gravity="center"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/saveboxandbrew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekbarLayout"
            android:layout_gravity="center"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/savebox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/BrewNowRecipe"
                style="@style/DefaultButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/brew"
                android:textAllCaps="false"
                app:cornerRadius="70dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/footer3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/saveboxandbrew"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="-65dp"
            android:contentDescription="@string/footer_with_copyright_description"
            app:srcCompat="@drawable/ic_footer_copyright" />
    </RelativeLayout>
</ScrollView>