<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8B5A39"
    android:paddingTop="32dp">

    <ImageView
        android:id="@+id/BrygMenuSheet"
        android:layout_width="800dp"
        android:layout_height="50dp"
        android:background="@drawable/bryg_menu_sheet" />

    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@id/BrygMenuSheet">

        <Button
            android:id="@+id/QuickBrew"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorplate1"


            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/quick_brew"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <Button
            android:id="@+id/Recipes"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorplate1"

            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/recipes"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <Button
            android:id="@+id/NewBrew"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorplate1"

            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/new_brew"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

    </LinearLayout>


</RelativeLayout>